public/stylesheets/report.css
#reported-data > h2 {
    height: 73px;
    margin-bottom: 0;
    background: #00838A;
    border-radius: 20px 20px 0px 0px;
    padding-left: 20px;
    font-style: normal;
    font-weight: 700;
    font-size: 35px;
    line-height: 49px;
    display: flex;
    align-items: center;
    color: white;
}

#reported-data{
    margin: auto;
    width: 80%;
}
#data {
    margin: auto;
}

#data > h3 {
    font-family: 'Inter';
    font-style: normal;
    font-weight: 600;
    font-size: 40px;
    line-height: 96.11%;
    margin: auto;
    text-align: center;
    margin-top: 20px;
    margin-bottom: 20px;
}

#survey {
    margin: auto;
    background: #00838A;
    border-radius: 20px;
    height: 100%;
    padding: 0;
}

#survey > iframe {
    text-align: center;
    margin: auto;
    width: 100%;
    height: 100%;
    border-radius: 20px;
}

#arrow {
    text-align: center;
    font-size: 30px;
    margin-bottom: 20px;
}

.no-scroll {
    overflow: hidden;
}

